--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://ipfs.fleek.co/ipfs/QmbH8Hkv6ZdvUkkUihnB5chQXwrLzWupLxokGuMwp6Q9x4/'" />
+<meta http-equiv="Refresh" content="0; url='https://green-feather-4770.on.fleek.co/'" />
