--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://resume-private-tclu1nc0-yaozeliang.4everland.app/'" />
+<meta http-equiv="Refresh" content="0; url='https://resume-private.4everland.app/#home'" />
