--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://green-feather-4770.on.fleek.co/'" />
+<meta http-equiv="Refresh" content="0; url='https://zyao.on.fleek.co/'" />
